<resources>
    <string name="app_name">AppTravel</string>
    <string name="title_add_person">Registar Usuario</string>
    <string name="title_consult_flight">Consultar Vuelos</string>
    <string name="title_detail_flight">Detalle Vuelo</string>
    <string name="title_detail_reservation">Detalle Reservación</string>
    <string name="title_home">Home</string>
    <string name="title_login">Log in</string>
    <string name="title_reservation">Reservaciones</string>
    <string name="title_show_flight">Vuelos Disponibles</string>
    <string name="title_landing">Landing</string>
    <string name="txt_name">Nombre: </string>
    <string name="txt_state">Estado: </string>
    <string name="txt_last_name">Apellido: </string>
    <string name="txt_user_name">Usuario: </string>
    <string name="txt_password">Password: </string>
    <string name="txt_age">Edad: </string>
    <string name="txt_consult">Consultar</string>
    <string name="txt_reservation">Reservados</string>
    <string name="txt_city1">Ciudad Origen: </string>
    <string name="txt_city2">Ciudad Destino: </string>
    <string name="txt_date">Fecha: </string>
    <string name="txt_hour1">Hora Inicio: </string>
    <string name="txt_hour2">Hora Fin</string>
    <string name="txt_price1">Precio Minimo: </string>
    <string name="txt_price2">Precio Maximo</string>
    <string name="welcome">Bienvenido a AppTravel, donde puede consultar, reservar y consultar el estado de nuestros vuelos</string>
    <string name="btn_login">Ingresar</string>
    <string name="btn_register">Registrar</string>
    <string name="btn_consult">Consultar</string>
    <string name="hint_username">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_date">dd/MM/yyyy</string>
    <string name="hint_hour">HH:mm</string>
</resources>
