<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".View.HomeActivity">
    <ImageView
        android:layout_width="@dimen/size_image"
        android:layout_height="@dimen/size_image"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:src="@drawable/ic_airplane"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtWelcome"
        android:layout_marginBottom="@dimen/big_margin_bottom"
        android:text="@string/welcome" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:background="@color/colorButton"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:id="@+id/btnLogin"
        android:onClick="login"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:background="@color/colorRegister"
        android:id="@+id/btnRegister"
        android:onClick="register"/>
</LinearLayout>
