<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".View.LandingActivity">
    <ImageView
        android:layout_width="@dimen/size_landings_image"
        android:layout_height="@dimen/size_landings_image"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:src="@drawable/ic_calendar"
        android:onClick="consult"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtConsult"
        android:layout_marginBottom="@dimen/big_margin_bottom"
        android:text="@string/txt_consult"
        android:textSize="@dimen/size_label"
        android:textStyle="bold"/>
    <ImageView
        android:layout_width="@dimen/size_landings_image"
        android:layout_height="@dimen/size_landings_image"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:src="@drawable/ic_global_airplane"
        android:onClick="reservation"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtReservation"
        android:layout_marginBottom="@dimen/big_margin_bottom"
        android:text="@string/txt_reservation"
        android:textStyle="bold"/>
    <ImageView
        android:layout_width="@dimen/size_landings_image"
        android:layout_height="@dimen/size_landings_image"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:src="@drawable/ic_airplane2"
        android:onClick="consultByState"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtState"
        android:layout_marginBottom="@dimen/big_margin_bottom"
        android:text="@string/txt_state"
        android:textStyle="bold"/>
</LinearLayout>